# poseidra

./: .gitignore  Cargo.toml
circuits/: commitment.circom  constants.circom  nullifier.circom  package-lock.json  package.json  withdraw.circom
contracts/: .gas-snapshot  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ComplianceRegistry.sol  MerkleTree.sol  Poseidra.sol  Verifier.sol
contracts/src/lib/: Poseidon.sol  PoseidonHasher.sol
contracts/test/: ComplianceRegistry.t.sol  MerkleTree.t.sol  Poseidra.t.sol
docs/: circuit-constraints.md  gas-report.md
prover/: Cargo.toml
prover/src/: domain.rs  errors.rs  lib.rs  poseidon.rs  prover.rs  witness.rs
prover/tests/: integration.rs
scripts/: compile.sh  generate_poseidon_sol.js  test_circuits.sh
web/: architecture.html  compliance.html  docs.html  index.html  research.html  roadmap.html
